Fix first paragraph alignment on pages with no title

--- a/css/lumeh.sass
+++ b/css/lumeh.sass
@@ -199,6 +199,7 @@ $header-gradient: linear-gradient(to bottom, #f4f4f4, $bg-light)
     background-color: $bg-dark
 
 .page .main-content
+  clear: right
   padding-bottom: 2em
 
 p
